<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="software.nhut.personalutilitiesforlife.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCuocHen"
            android:text="@string/btnCuocHen"
            android:onClick="moCuocHen"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnKaraoke"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnKaraoke"
            android:onClick="moKaraoke"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTinNhan"
            android:id="@+id/btnTinNhan"
            android:layout_gravity="right"
            android:onClick="moTinNhan"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGame"
            android:id="@+id/btnGame"
            android:onClick="moTroChoi"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHinhPhim"
            android:id="@+id/btnHinhPhim"
            android:layout_gravity="center_horizontal"
            android:onClick="moHinhPhim"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDoiTien"
            android:id="@+id/btnDoiTien"
            android:layout_gravity="right"
            android:onClick="moDoiTien"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBanDo"
            android:id="@+id/btnBanDo"
            android:onClick="moBanDo"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGhiChu"
            android:id="@+id/btnGhiChu"
            android:layout_gravity="center_horizontal"
            android:onClick="moGhiChu"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDongBoMayTinh"
            android:id="@+id/btnDongBo"
            android:layout_gravity="right"
            android:onClick="moDongBo"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtInfo"
        android:gravity="bottom|right" />

</LinearLayout>
